[package]
description = "WASM map renderer"
authors = ["bendn <bend.n@outlook.com>"]
license = "MIT"
name = "masm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mindus = { version = "5.0.2", default-features = false }
png = { version = "0.17.10", features = ["unstable"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
